# OpenCV-practice

./: CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  cmake_install.cmake  color_slider  color_slider.cpp  conden  conden.cpp  dispvid  dispvid.cpp  load  load.cpp  output.mpg  roi  roi.cpp  try.cpp  writvid  writvid.cpp
