cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( DisplayImage try.cpp )
add_executable( load load.cpp )
add_executable( color_slider color_slider.cpp )
add_executable(roi roi.cpp)
add_executable(dispvid dispvid.cpp)
add_executable(writvid writvid.cpp)
add_executable(conden conden.cpp)
target_link_libraries( conden ${OpenCV_LIBS})
target_link_libraries( roi ${OpenCV_LIBS})
target_link_libraries( writvid ${OpenCV_LIBS})
target_link_libraries( dispvid ${OpenCV_LIBS})
target_link_libraries( color_slider ${OpenCV_LIBS})

target_link_libraries( DisplayImage ${OpenCV_LIBS} )
target_link_libraries( load ${OpenCV_LIBS} )
